--- a/WebsiteComputers/src/app/components/category/category.component.html
+++ b/WebsiteComputers/src/app/components/category/category.component.html
@@ -1,5 +1,5 @@
 <br />
-<h1 style="text-align: center;">{{selectedBrand}}</h1>
+<h1 style="text-align: center;">{{selectedCategory}}</h1>
 <br />
 
 <!-- table content -->
@@ -47,7 +47,7 @@
     </p-dataView>
 </div> -->
 
-<app-table-product [contents]="contents"></app-table-product>
+<!-- <app-table-product [contents]="contents"></app-table-product> -->
 <!-- table content -->
 
 <br />
